# verticaudxutilities

./: .gitignore  CMakeLists.txt  DynPython.md  LICENSE  README.md  build.sh
cpp/verticaudxutilities/: Args.cpp  Args.h  Base36ToIntConversion.cpp  Base36ToIntConversion.h  BinaryCharConversions.cpp  BinaryCharConversions.h  Csv.cpp  Csv.h  LinearAlgebra.cpp  LinearAlgebra.h  MPArgs.cpp  MPArgs.h  RegisterLibrary.cpp  RowCount.cpp  RowCount.h  SQLDigest.cpp  SQLDigest.h  Seq.cpp  Seq.h  TimeIntNumConversions.cpp  TimeIntNumConversions.h  UDxUtilities.cpp  UDxUtilities.h  VerticaLog.cpp  VerticaLog.h  VerticaLs.cpp  VerticaLs.h  create_functions.sql  deploy.sh  test_queries.sql  vertica_dual.sql
docs/: ARGS.md  BASE36_CONVERSIONS.md  CSV.md  DATE_TIME_CONVERSIONS.md  MISSING_FUNCTIONS.md  ROW_COUNT.md  SEQ.md  SQL_DIGEST.md  UDX_PARALLELIZATION.md  VERTICA_LOG.md  VERTICA_LS.md  VerticaStatTweaker.md  VerticaTableRedesign.md
python/DynPython/: DynPython.py  create_functions.sql  deploy.sh  test_queries.sql
scripts/python/: VerticaExportTable.py  VerticaStatTweaker.py  VerticaTableRedesign.py
scripts/shell/: common_deploy.sh  common_deploy_python.sh
